--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/app/vendors/normalize.css",
+              "src/app/vendors/grid.css"
             ],
             "scripts": []
           },
@@ -79,7 +81,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/app/vendors/normalize.css",
+              "src/app/vendors/grid.css"
             ],
             "scripts": [],
             "assets": [
