--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.12",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ngrx/store": "^7.1.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "ionicons": "^4.5.5",
     "js-sha256": "^0.9.0",
     "rxjs": "~6.3.3",
