--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-sha256": "^0.9.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
