--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "material-design-icons": "^3.0.1",
     "ng2-charts": "^2.2.2",
     "rxjs": "~6.3.3",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
