--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,11 @@
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -23,9 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/app/vendors/css/normalize.css",
-              "src/app/vendors/css/grid.css",
+              "src/styles.scss",
+              "src/app/vendors/css/normalize.scss",
+              "src/app/vendors/css/grid.scss",
               "node_modules/ionicons/dist/scss/ionicons.scss",
               "src/app/theme.scss"
             ],
@@ -83,9 +87,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css",
-              "src/app/vendors/css/normalize.css",
-              "src/app/vendors/css/grid.css",
+              "src/styles.scss",
+              "src/app/vendors/css/normalize.scss",
+              "src/app/vendors/css/grid.scss",
               "node_modules/ionicons/dist/scss/ionicons.scss",
               "src/app/theme.scss"
             ],
