--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.2.12",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
@@ -23,17 +24,21 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@ngrx/store": "^7.1.0",
-    "bootstrap": "^3.3.7",
-    "chart.js": "^2.8.0",
+    "@types/chart.js": "^2.7.52",
+    "chart.js": "^2.5.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "core-js": "^2.5.4",
+    "easy-pie-chart": "^2.1.7",
     "hammerjs": "^2.0.8",
     "ionicons": "^4.5.5",
     "js-sha256": "^0.9.0",
     "material-design-icons": "^3.0.1",
+    "ng-uikit-pro-standard": "git+https://oauth2:ULKdG4NuUxzJcpQFspxF@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "ng2-charts": "^2.2.2",
     "rxjs": "~6.3.3",
+    "screenfull": "^3.3.0",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
