--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "material-design-icons": "^3.0.1",
     "ng-uikit-pro-standard": "git+https://oauth2:ULKdG4NuUxzJcpQFspxF@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "ng2-charts": "^2.2.2",
+    "ngx-clipboard": "^12.0.0",
     "rxjs": "~6.3.3",
     "screenfull": "^3.3.0",
     "time-ago-pipe": "^1.3.2",
