--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/core": "~7.2.0",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
@@ -39,7 +40,8 @@
     "ng2-charts": "^2.2.2",
     "ngx-clipboard": "^12.0.0",
     "ngx-toastr": "^10.0.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "screenfull": "^3.3.0",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
