WiP: front-end connected

--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "serve": "pm2 start npm --no-automation --name coris-service -- run start",
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
