--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@ngrx/store": "^7.1.0",
     "@types/chart.js": "^2.7.52",
+    "buffer": "^5.2.1",
     "chart.js": "^2.5.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "core-js": "^2.5.4",
@@ -53,7 +54,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
