--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "types": []
+    "module": "es2015",
+    "types": ["node"]
   },
   "exclude": [
     "test.ts",
