--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-clipboard": "^12.0.0",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
     "screenfull": "^3.3.0",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
