--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "bundle": "ng build --output-path docs --base-href /explorer-test/"
+    "bundle": "ng build --prod --build-optimizer --output-path distr"
   },
   "private": true,
   "dependencies": {
