--- a/angular.json
+++ b/angular.json
@@ -27,22 +27,11 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ionicons/dist/scss/ionicons.scss",
-              "src/app/vendors/css/normalize.scss",
-              "src/app/vendors/css/grid.scss",
-              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
-              "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
-              "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
-              "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
-              "node_modules/ng-uikit-pro-standard/assets/scss/bootstrap/bootstrap.scss",
-              "node_modules/ng-uikit-pro-standard/assets/scss/mdb.scss",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss",
               "src/app/theme.scss"
             ],
             "scripts": [
-              "node_modules/chart.js/dist/Chart.js",
-              "node_modules/easy-pie-chart/dist/easypiechart.js",
               "node_modules/screenfull/dist/screenfull.js",
               "node_modules/hammerjs/hammer.min.js"
             ]
@@ -100,14 +89,11 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.scss",
-              "src/app/vendors/css/normalize.scss",
-              "src/app/vendors/css/grid.scss",
+              "src/app/theme.scss",
               "node_modules/ionicons/dist/scss/ionicons.scss",
-              "src/app/theme.scss"
+              "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [
-              "src/app/vendors/js/app.js"
-            ],
+            "scripts": [ ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
