--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ng-uikit-pro-standard": "git+https://oauth2:ULKdG4NuUxzJcpQFspxF@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "ng2-charts": "^2.2.2",
     "ngx-clipboard": "^12.0.0",
+    "ngx-swiper-wrapper": "^8.0.0",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
     "screenfull": "^3.3.0",
