--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~8.2.2",
     "@angular/compiler": "~8.2.2",
     "@angular/core": "~8.2.2",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.2.2",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~8.2.2",
